cluster/studentbee/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: studentbee-frontend
    component: frontend
    part-of: beehive
    project: exam.login.no
    confidentiality: not-defined
    compliance: not-defined
  name: studentbee-frontend
  namespace: studentbee
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: studentbee-frontend
  template:
    metadata:
      labels:
        app: studentbee-frontend
        component: frontend
        part-of: beehive
        project: exam.login.no
        confidentiality: not-defined
        compliance: not-defined
    spec:
      imagePullSecrets:
        - name: gitlab-deploy-key-studentbee
      containers:
        - name: webserver
          image: registry.login.no/tekkom/web/beehive/exam.login.no/frontend:2.2.0-dev@sha256:8e6c2a0655036f046a11287fe550ea922610046b1168167000b3ef63c9a66273
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: 3000tcp
              protocol: TCP
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 3000
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 3000
          #   initialDelaySeconds: 30
          #   periodSeconds: 5
          resources:
            requests:
              memory: 128Mi
              cpu: 125m
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nginx
              topologyKey: kubernetes.io/hostname
